#Device Model and brand #Register button #higher-priority messages

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,4 +26,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true" />
+
+    <Button
+        android:id="@+id/btnRegister"
+        android:layout_width="match_parent"
+        android:layout_above="@id/txt_reg_id"
+        android:text="Register Device"
+        android:gravity="center"
+        android:layout_height="wrap_content" />
 </RelativeLayout>
