--- a/web_app/style.css
+++ b/web_app/style.css
@@ -13,8 +13,16 @@ body {
 * {
   transition: 0.125s; }
 
-.device-select {
-  color: #333; }
+.panel-heading {
+  padding: 15px; }
+  .panel-heading .dropdown {
+    display: inline-block;
+    float: right;
+    color: #333;
+    margin-top: -5px; }
+    .panel-heading .dropdown .btn {
+      margin: 0 !important;
+      padding: 4px 12px; }
 
 .abc {
   display: flex;
