--- a/androidApp/app/src/main/res/layout/activity_main.xml
+++ b/androidApp/app/src/main/res/layout/activity_main.xml
@@ -4,11 +4,13 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#000000"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.geil.myapplication.activity.MainActivity">
+
     <TextView
         android:id="@+id/txt_push_message"
         android:layout_width="wrap_content"
@@ -17,27 +19,43 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
         android:gravity="center_horizontal"
-        android:textColor="@color/colorPrimary"
+        android:textColor="#333333"
         android:textSize="26dp" />
+
     <TextView
+        android:id="@+id/txt_main_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/txt_reg_id"
+        android:layout_centerHorizontal="true"
         android:gravity="center_vertical"
-        android:textStyle="bold"
-        android:textSize="48sp"
-        android:text="ALL GOOD" />
+        android:text="0"
+        android:textColor="#d7d7d7"
+        android:textSize="32dp" />
+
     <TextView
         android:id="@+id/txt_reg_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true" />
+        android:layout_below="@+id/txt_reg_status"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:text="Waiting for Firebase..."
+        android:textColor="#d7d7d7" />
+
+    <TextView
+        android:id="@+id/txt_reg_status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#d7d7d7" />
 
     <Button
         android:id="@+id/btnRegister"
         android:layout_width="match_parent"
-        android:layout_above="@id/txt_reg_id"
-        android:text="Register Device"
-        android:textAllCaps="false"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:gravity="center"
-        android:layout_height="wrap_content" />
+        android:text="Register This Device"
+        android:textAllCaps="false"
+        android:textColor="@color/common_google_signin_btn_text_light" />
 </RelativeLayout>
