--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,50 +12,45 @@
     tools:context="com.geil.myapplication.activity.MainActivity">
 
     <TextView
-        android:id="@+id/txt_push_message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"
-        android:gravity="center_horizontal"
-        android:textColor="#333333"
-        android:textSize="26dp" />
-
-    <TextView
         android:id="@+id/txt_main_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/txt_reg_id"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginBottom="176dp"
         android:gravity="center_vertical"
         android:text="0"
         android:textColor="#d7d7d7"
-        android:textSize="32dp" />
+        android:textSize="18sp" />
 
-    <TextView
-        android:id="@+id/txt_reg_id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/txt_reg_status"
-        android:ellipsize="end"
-        android:maxLines="1"
-        android:text="Waiting for Firebase..."
-        android:textColor="#d7d7d7" />
+    <HorizontalScrollView
+        android:id="@+id/scrollView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="13dp">
 
-    <TextView
-        android:id="@+id/txt_reg_status"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="#d7d7d7" />
+        <TextView
+            android:id="@+id/txt_status"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:fontFamily="monospace"
+            android:maxLines="1000"
+            android:textColor="#40cc00"
+            android:textSize="12sp"
+            android:typeface="monospace" />
+    </HorizontalScrollView>
+
 
     <Button
         android:id="@+id/btnRegister"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
         android:gravity="center"
-        android:text="Register This Device"
+        android:text="Button Disabled"
         android:textAllCaps="false"
         android:textColor="@color/common_google_signin_btn_text_light" />
 </RelativeLayout>
